--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-viewport-watch",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "main": "angular-viewport-watch.js",
   "ignore": [
     ".*",
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "angular": "^1.2.0",
-    "scrollMonitor": "https://github.com/dirkgroenen/scrollMonitor.git#1.0.14"
+    "scrollMonitor": "~https://github.com/dirkgroenen/scrollMonitor.git#1.0.15"
   },
   "devDependencies": {
     "angular-mocks": "^1.2.0",
