--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "angular": "^1.2.0",
-    "scrollMonitor": "~1.0.10"
+    "scrollMonitor": "https://github.com/stutrek/scrollMonitor"
   },
   "devDependencies": {
     "angular-mocks": "^1.2.0",
