--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "angular-viewport-watch",
-  "version": "0.0.0",
+  "version": "0.1.11",
+  "main": "angular-viewport-watch.js",
   "dependencies": {},
   "devDependencies": {
     "coveralls": "^2.10.0",
