--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "#tbd",
     "start": "grunt serve"
   },
-  "private": false,
+  "private": true,
   "publishConfig": {
     "registry": "http://repo.dev.wix/artifactory/api/npm/npm-local/"
   }
